# -BOQ-

./: .gitignore  .pre-commit-config.yaml  A1_FORMAT_SUPPORT_REPORT.md  AGENT_COORDINATION_SESSION.md  BUG_FIXES_SUMMARY.md  COMPREHENSIVE_BUG_FIXES.md  COMPREHENSIVE_GITHUB_CODEBASE_ANALYSIS.md  CSV_DEPENDENCIES_FIX.md  CSV_IMPLEMENTATION_COMPLETE.md  DEPENDENCY_INSTALLATION_COMPLETE.md  DEPLOYMENT_VERIFICATION_COMPLETE.md  DOCKER_SMOKE_TEST_REPORT.md  END_TO_END_CLI_REPORT.md  FINAL_REQUIREMENTS_COMPLIANCE_REPORT.md  GITHUB_PUSH_SUMMARY.md  GITHUB_VERIFICATION_REPORT.md  HEALTH_CHECK_REPORT.md  MAJOR_BUG_FIX_REPORT.md  MAKE_UI_CONFIRMATION_REPORT.md  MULTI_AGENT_COORDINATION_PLAN.md  MULTI_AGENT_SUCCESS_REPORT.md  Makefile  README.md  REQUIREMENTS_ALIGNMENT_ANALYSIS.md  STREAMLIT_UI_SMOKE_TEST_REPORT.md  TESSERACT_OCR_VERSION_REPORT.md  UI_PIPELINE_FIX_REPORT.md  UI_SMOKE_TEST_REPORT.md  ULTIMATE_DEPENDENCY_INTEGRATION_REPORT.md  You are my coder .docx  app.py  cli_enhanced.py  create_architectural_test_pdf.py  create_test_pdf.py  enhanced_app.py  multi_agent_debug_test.py  pyproject.toml  requirements.txt  requirements_simple.txt  streamlit_ui_smoke_test.py  (+14 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
archive/legacy_spatial_reference/: __init__.py  spatial.py
config/: default.yml
docker/: Dockerfile  entrypoint.sh
outputs/cli_test/: processing_summary_1753405093.txt
src/: extract_zones_codes.py
tests/: test_cli.py  test_code_normalisation.py  test_normalize_validate.py  test_placeholder.py  test_preprocess.py  test_regex.py  test_spatial.py
(+24 files in other folders)
